[package]
name = "websocket-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "net", "macros", "io-std", "sync"] }
tokio-tungstenite = { version = "0.28.0", features = ["connect"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
futures-channel = "0.3.31"
futures-util = { version = "0.3.31", default-features = false, features = ["sink", "std"] }